# LetoCTF24-AD

checkers/crud/: checker.py  requirements.txt
checkers/pass_vault/: checker.py  passvault_lib.py  websites.txt
services/crud/: CMakeLists.txt  Dockerfile  README.md  crud_task  docker-compose.yml  main.cpp  runner.py
services/pass_vault/: README.md  docker-compose.yml
services/pass_vault/backend/: Dockerfile  requirements.txt
services/pass_vault/backend/app/: auth.py  crud.py  database.py  main.py  models.py  routes.py  schemas.py
services/pass_vault/db/: init.sql
services/pass_vault/nginx/: Dockerfile  default.conf
services/pass_vault/nginx/pages/: index.html  login.html  panel.html  registration.html
sploits/crud/: info.txt  spl.py
